--- a/views/consultas.html
+++ b/views/consultas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="../js/consultas.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,6 +9,7 @@
 </head>
 <body>
     Bienvenido a consultas
-    <script>document.write(token)</script>
+    <br>
+    <label id="datos"></label>
 </body>
 </html>
