--- a/views/consultas.html
+++ b/views/consultas.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="../js/consultas.js"></script>
+    <link rel="stylesheet" href="../css/master.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pefil</title>
 </head>
+
 <body>
-    Bienvenido a consultas
-    <br>
-    <label id="datos"></label>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Perfil</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Top Songs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Top Artists</a>
+            </li>
+        </ul>
+    </nav>
+    <section class="container">
+		<div class="row">
+			<div class="col-lg d-flex justify-content-center">
+				<img id="profile" src="" class="img-fluid rounded-circle">
+                <br>
+                <h3 style="text-align: center">
+                    <label id="datos"></label>
+                </h3>
+			</div>
+		</div>
+	</section>
 </body>
+
 </html>
