--- a/views/consultas.html
+++ b/views/consultas.html
@@ -4,9 +4,14 @@
 <head>
     <script src="../js/consultas.js"></script>
     <link rel="stylesheet" href="../css/master.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -28,16 +33,44 @@
         </ul>
     </nav>
     <section class="container">
-		<div class="row">
-			<div class="col-lg d-flex justify-content-center">
-				<img id="profile" src="" class="img-fluid rounded-circle">
+        <div class="row mt-4">
+            <div class="col-12 d-flex justify-content-center">
+                <img id="profile" src="" class="img-fluid thumbnail rounded-circle">
                 <br>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+                <h2 style="text-align: center">
+                    <b><label id="datos"></label></b>
+                </h2>
+            </div>
+        </div>
+    </section>
+    <section class="container testimonial-group">
+        <div class="row mt-4 flex-nowrap">
+            <div class="col-12 d-flex justify-content-center">
                 <h3 style="text-align: center">
-                    <label id="datos"></label>
+                    <b><label>Playlists</label></b>
                 </h3>
-			</div>
-		</div>
-	</section>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row flex-nowrap" id="playlists">
+        </div>
+    </section>
+    <section class="container testimonial-group">
+        <div class="row mt-4 flex-nowrap">
+            <div class="col-12 d-flex justify-content-center">
+                <h3 style="text-align: center">
+                    <b><label>Populares</label></b>
+                </h3>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row flex-nowrap" id="popular">
+        </div>
+    </section>
 </body>
 
 </html>
