added playlists view plus some fixes

--- a/css/master.css
+++ b/css/master.css
@@ -4,7 +4,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: antiquewhite !important;
+    color: azure !important;
 }
 .testimonial-group>.row {
     overflow-x: auto;
