--- a/views/consultas.html
+++ b/views/consultas.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">Perfil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Top Songs</a>
+                <a class="nav-link" href="./topSongs.html">Top Songs</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Top Artists</a>
@@ -87,6 +87,32 @@
     </section>
     <section class="container-fluid testimonial-group">
         <div class="row flex-nowrap" id="album">
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row mt-4 flex-nowrap">
+            <div class="col-12 d-flex justify-content-left">
+                <h3 style="text-align: center">
+                    <b><label>Your Top Tracks</label></b>
+                </h3>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row flex-nowrap" id="toptracks">
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row mt-4 flex-nowrap">
+            <div class="col-12 d-flex justify-content-left">
+                <h3 style="text-align: center">
+                    <b><label>Your Top Artists</label></b>
+                </h3>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row flex-nowrap" id="topartists">
         </div>
     </section>
 </body>
