--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,11 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
+<script>
+        function logout() {
+            ipcRenderer.send('clear', obj);
+        }
+    </script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -17,6 +22,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item disabled">
+                <a class="nav-link" href="#">Perfil</a>
+            </li>
+            <li class="nav-item disabled">
+                <a class="nav-link" href="#">Top Songs</a>
+            </li>
+            <li class="nav-item disabled">
+                <a class="nav-link" href="#">Top Artists</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="./index.html" onclick="logout()">Logout</a>
+            </li>
+        </ul>
+    </nav>
     <br />
     <br />
     <br />
