--- a/views/consultas.html
+++ b/views/consultas.html
@@ -15,10 +15,7 @@
     <script>
         function showPlaylist(obj) {
             ipcRenderer.send('playlistShow', obj);
-        }
-        function logout() {
-            ipcRenderer.send('clear', obj);
-        }
+        };
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +24,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Perfil</a>
@@ -39,7 +36,7 @@
                 <a class="nav-link" href="#">Top Artists</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./index.html" onclick="logout()">Logout</a>
+                <button id="logout" class="card-link btn btn-danger">Logout</button>
             </li>
         </ul>
     </nav>
