--- a/css/master.css
+++ b/css/master.css
@@ -40,3 +40,7 @@ body {
     border-radius: 12px;
     -webkit-box-shadow: inset 0 0 6px rgba(26, 26, 26, 0.815);
 }
+
+#ex1Slider .slider-selection {
+    background: #BABABA;
+}
