--- a/views/consultas.html
+++ b/views/consultas.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="./topSongs.html">Top Songs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Top Artists</a>
+                <a class="nav-link" href="./player.html">Player</a>
             </li>
             <li class="nav-item">
                 <button id="logout" class="card-link btn btn-danger">Logout</button>
@@ -116,6 +116,19 @@
     </section>
     <section class="container-fluid testimonial-group">
         <div class="row flex-nowrap" id="topartists">
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row mt-4 flex-nowrap">
+            <div class="col-12 d-flex justify-content-left">
+                <h3 style="text-align: center">
+                    <b><label>Recently Played</label></b>
+                </h3>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid testimonial-group">
+        <div class="row flex-nowrap" id="recent">
         </div>
     </section>
 </body>
