--- a/views/index.html
+++ b/views/index.html
@@ -17,22 +17,6 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <ul class="navbar-nav">
-            <li class="nav-item disabled">
-                <a class="nav-link" href="#">Perfil</a>
-            </li>
-            <li class="nav-item disabled">
-                <a class="nav-link" href="#">Top Songs</a>
-            </li>
-            <li class="nav-item disabled">
-                <a class="nav-link" href="#">Top Artists</a>
-            </li>
-            <li class="nav-item active">
-                <button id="logout" class="card-link btn btn-danger">Logout</button>
-            </li>
-        </ul>
-    </nav>
     <br />
     <br />
     <br />
@@ -41,10 +25,10 @@
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
                 <div class="card" id="sLogin">
-                    <img class="card-img-top" style="width: 300px"" src="
+                    <img class="card-img-top" style="width: 350px" src="
                         https://i.kinja-img.com/gawker-media/image/upload/s--ypN6iH9q--/c_fill,fl_progressive,g_center,h_900,q_80,w_1600/zrarqnhmkoaihvzss5ek.jpg"
                         alt="Card image">
-                    <div class="card-body">
+                    <div class="card-body ">
                         <h4 class="card-title">Spotify</h4>
                         <p class="card-text">You have to login to your spotify account</p>
                         <button id="login" class="card-link btn btn-success">Login to Spotify</button>
@@ -59,31 +43,6 @@
             </div>
         </div>
     </section>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
     <br />
     <br />
     <br />
