--- a/views/player.html
+++ b/views/player.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <script src="../js/./topSongs.js"></script>
+    <script src="../js/player.js"></script>
     <link rel="stylesheet" href="../css/master.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
@@ -12,28 +11,23 @@
     </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script>
-        function showSong(obj) {
-            ipcRenderer.send('songShow', obj);
-        };
-    </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Top Songs</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="./consultas.html">Perfil</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Top Songs</a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" href="./player.html">Player</a>
+                <a class="nav-link" href="./topSongs.html">Top Songs</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Player</a>
             </li>
             <li class="nav-item">
                 <button id="logout" class="card-link btn btn-danger">Logout</button>
@@ -43,29 +37,38 @@
     <section class="container">
         <div class="row mt-4">
             <div class="col-12 d-flex justify-content-center">
-                <img id="profile" src="" class="img-fluid thumbnail rounded-circle">
+                <img id="songI" src="" class="img-fluid rounded">
                 <br>
             </div>
             <div class="col-12 d-flex justify-content-center">
                 <h2 style="text-align: center">
-                    <b><label id="datos"></label></b>
+                    <b><label id="name"></label></b>
                 </h2>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+                <h4 style="text-align: center">
+                    <b><label id="artist"></label></b>
+                </h4>
             </div>
         </div>
     </section>
     <section class="container">
         <div class="row mt-4">
-            <div class="col-12 d-flex justify-content-left">
-                <h3 style="text-align: center">
-                    <b><label>Your Top Tracks</label></b>
-                </h3>
+            <div class="col-12 d-flex justify-content-center">
+                <button id="btnPrevious" class="material-icons btn" style="font-size:72px; color:aliceblue;">
+                    skip_previous
+                </button>
+                <button id="btnPP" class="material-icons btn" style="font-size:72px; color:aliceblue;">
+                </button>
+                <button id="btnNext" class="material-icons btn" style="font-size:72px; color:aliceblue;">
+                    skip_next
+                </button>
+                <input id="vol" type="range" value="100" min="0" max="100">
             </div>
         </div>
     </section>
-    <section class="container">
-        <div class="row mt-4" id="toptracks">
-        </div>
-    </section>
+    <br>
+    <br>
+    <br>
 </body>
-
 </html>
