--- a/views/player.html
+++ b/views/player.html
@@ -66,6 +66,11 @@
                 <input id="vol" type="range" value="100" min="0" max="100">
             </div>
         </div>
+        <div class="row mt-4">
+            <div class="col-12 d-flex justify-content-center">
+                <input id="playing" type="range" value="0" min="0" style="width: 800px" disabled="true">
+            </div>
+        </div>
     </section>
     <br>
     <br>
