--- a/css/master.css
+++ b/css/master.css
@@ -34,11 +34,13 @@ body {
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.76);
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.76);
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 12px;
     -webkit-box-shadow: inset 0 0 6px rgba(26, 26, 26, 0.815);
+    box-shadow: inset 0 0 6px rgba(26, 26, 26, 0.815);
 }
 
 #ex1Slider .slider-selection {
